# astrobee

./: CMakeLists.txt
mobility/: CMakeLists.txt
mobility/mobility/: CMakeLists.txt  package.xml
mobility/mobility/tools/: teleop.cc
mobility/planner_scp/: CMakeLists.txt  readme.md
mobility/planner_scp/collision_checker/: CMakeLists.catkin  CMakeLists.nasa  CMakeLists.txt  package.xml
mobility/planner_scp/collision_checker/include/collision_checker/: bullet_collision_checker.h  types.h
mobility/planner_scp/collision_checker/src/: bullet_collision_checker.cpp
mobility/planner_scp/planner_scp/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mobility/planner_scp/planner_scp/launch/: planner_scp.launch
mobility/planner_scp/planner_scp/src/: planner_scp.cc
mobility/planner_scp/sampling_planner/: CMakeLists.catkin  CMakeLists.nasa  package.xml
mobility/planner_scp/sampling_planner/include/sampling_planner/: mpproblem.h  types.h
mobility/planner_scp/sampling_planner/protobuf/: planner_fmt_protobuf.proto
mobility/planner_scp/sampling_planner/src/: mpproblem.cpp
mobility/planner_scp/scp/: CMakeLists.catkin  CMakeLists.nasa  README.md  package.xml
mobility/planner_scp/scp/include/scp/: bullet_collision_checker.h  traj_opt.h  types.h
mobility/planner_scp/scp/src/: bullet_collision_checker.cpp  traj_opt.cpp
mobility/planner_scp/scp/test/: test1.cpp  test_bullet.cpp
mobility/planner_scp/scp/test/utils/: quat_functions.jl  skew.m  symbolic_math.m
mobility/planner_scp_gusto/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
mobility/planner_scp_gusto/include/: CPPLINT.cfg
mobility/planner_scp_gusto/include/bullet3/Extras/ConvexDecomposition/: ConvexBuilder.h  ConvexDecomposition.h
mobility/planner_scp_gusto/include/bullet3/Extras/GIMPACTUtils/: btGImpactConvexDecompositionShape.cpp  btGImpactConvexDecompositionShape.h
mobility/planner_scp_gusto/include/bullet3/Extras/InverseDynamics/: btMultiBodyFromURDF.hpp  btMultiBodyTreeCreator.hpp  invdyn_bullet_comparison.cpp
mobility/planner_scp_gusto/include/bullet3/Extras/Serialize/BlenderSerialize/: bMain.h
mobility/planner_scp_gusto/include/bullet3/Extras/Serialize/BulletFileLoader/: bCommon.h  bFile.cpp  btBulletFile.cpp  btBulletFile.h
mobility/planner_scp_gusto/include/bullet3/Extras/Serialize/BulletWorldImporter/: btBulletWorldImporter.cpp  btMultiBodyWorldImporter.cpp  btWorldImporter.cpp  btWorldImporter.h
mobility/planner_scp_gusto/include/bullet3/Extras/Serialize/BulletXmlWorldImporter/: btBulletXmlWorldImporter.h  string_split.h
mobility/planner_scp_gusto/include/bullet3/Extras/Serialize/HeaderGenerator/: apiGen.cpp
mobility/planner_scp_gusto/include/bullet3/Extras/Serialize/makesdna/: makesdna.cpp
mobility/planner_scp_gusto/include/bullet3/Extras/VHACD/src/: VHACD.cpp  vhacdMesh.cpp  vhacdVolume.cpp
mobility/planner_scp_gusto/include/bullet3/src/: btBulletCollisionAll.cpp  btBulletCollisionCommon.h  btBulletDynamicsAll.cpp  btBulletDynamicsCommon.h  btLinearMathAll.cpp
mobility/planner_scp_gusto/include/bullet3/src/Bullet3Common/: b3Scalar.h
mobility/planner_scp_gusto/include/bullet3/src/Bullet3OpenCL/NarrowphaseCollision/: b3OptimizedBvh.cpp
mobility/planner_scp_gusto/include/bullet3/src/BulletCollision/BroadphaseCollision/: btAxisSweep3.h  btAxisSweep3Internal.h  btBroadphaseInterface.h  btBroadphaseProxy.h  btCollisionAlgorithm.h  btDbvt.cpp  btDbvt.h  btDbvtBroadphase.cpp  btDbvtBroadphase.h  btDispatcher.h  btOverlappingPairCache.cpp  btOverlappingPairCache.h  btQuantizedBvh.cpp  btQuantizedBvh.h  btSimpleBroadphase.cpp
mobility/planner_scp_gusto/include/bullet3/src/BulletCollision/CollisionDispatch/: SphereTriangleDetector.cpp  SphereTriangleDetector.h  btActivatingCollisionAlgorithm.h  btBox2dBox2dCollisionAlgorithm.cpp  btBox2dBox2dCollisionAlgorithm.h  btBoxBoxCollisionAlgorithm.cpp  btBoxBoxCollisionAlgorithm.h  btBoxBoxDetector.cpp  btBoxBoxDetector.h  (+42 more)
mobility/planner_scp_gusto/include/bullet3/src/BulletInverseDynamics/: IDConfig.hpp
mobility/planner_scp_gusto/include/bullet3/src/BulletSoftBody/: btCGProjection.h  btDefaultSoftBodySolver.cpp  btDeformableBackwardEulerObjective.cpp  btDeformableBackwardEulerObjective.h  btDeformableBodySolver.cpp  btDeformableBodySolver.h  btDeformableContactProjection.h  btDeformableCorotatedForce.h  btDeformableLinearElasticityForce.h  btDeformableMultiBodyConstraintSolver.h  btDeformableMultiBodyDynamicsWorld.cpp  btDeformableMultiBodyDynamicsWorld.h  btDeformableNeoHookeanForce.h  btKrylovSolver.h  btSoftBody.cpp  btSoftBody.h  btSoftBodyConcaveCollisionAlgorithm.cpp  btSoftBodyConcaveCollisionAlgorithm.h  btSoftBodyData.h  btSoftBodyHelpers.cpp  btSoftBodyInternals.h  btSoftBodyRigidBodyCollisionConfiguration.cpp  btSoftBodyRigidBodyCollisionConfiguration.h  btSoftBodySolvers.h  btSoftMultiBodyDynamicsWorld.cpp  btSoftMultiBodyDynamicsWorld.h  btSoftRigidCollisionAlgorithm.cpp  btSoftRigidCollisionAlgorithm.h  btSoftRigidDynamicsWorld.cpp  btSoftRigidDynamicsWorld.h  btSoftSoftCollisionAlgorithm.cpp  btSoftSoftCollisionAlgorithm.h  btSparseSDF.h  poly34.h
mobility/planner_scp_gusto/include/bullet3/src/LinearMath/: btCpuFeatureUtility.h  btMatrixX.h
mobility/planner_scp_gusto/include/bullet3/test/collision/: SphereSphereCollision.h  btDistanceInfo.h  main.cpp
mobility/planner_scp_gusto/include/planner_scp_gusto/: bullet_collision_checker.h  optim.h  planner_scp_gusto.h  types.h
mobility/planner_scp_gusto/launch/: planner_scp_gusto.launch
mobility/planner_scp_gusto/src/: bullet_collision_checker.cpp  optim.cc  planner_scp_gusto.cc  planner_scp_gusto_nodelet.cc
(+236 files in other folders)
