<?xml version="1.0"?>
<package format="2">
  <name>scp</name>
  <version>0.0.1</version>
  <description>
    Calls SCP trajectory optimization.
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>eigen3</depend>
</package>
